--- a/petzone/index.html
+++ b/petzone/index.html
@@ -145,22 +145,10 @@
                 <a href="blog.html" class="dropdown-item">Blog Grid</a>
               </div>
             </div>
+            <div id="divprofile"></div>
           </div>
           <div>
-            <script>
-              function hide() {
-                if (!sessionStorage.getItem("User")) {
-                  var Lbtn = document.getElementById("Lbtn").style.visibility;
-                  Lbtn = "hidden";
-                }
-              }
-            </script>
-            <a
-              id="Lbtn"
-              href="../PetZone/login/login.html"
-              class="btn btn-lg btn-primary px-1 d-none d-lg-block"
-              >Sign In</a
-            >
+            <div id="btnlogin"></div>
           </div>
         </div>
       </nav>
@@ -843,5 +831,25 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <script>
+      console.log(sessionStorage.getItem("User"));
+      let str = "";
+      let divprofile = "";
+      if (JSON.parse(sessionStorage.getItem("User")) == null) {
+        str = ` <a
+        id='Lbtn'
+        href='../PetZone/login/login.html'
+        class='btn btn-lg btn-primary px-1 d-none d-lg-block'
+        >Sign In</a
+      >`;
+        console.log(str);
+        document.getElementById("btnlogin").innerHTML = str;
+      } else {
+        divprofile = ` <a href='profile/' class='nav-item nav-link'
+        >Profile</a
+      >`;
+        document.getElementById("divprofile").innerHTML = divprofile;
+      }
+    </script>
   </body>
 </html>
