email text changed

--- a/petzone/petdiseasepredictor.html
+++ b/petzone/petdiseasepredictor.html
@@ -131,7 +131,7 @@
                     </div>
                     <div class="d-inline-flex flex-column text-center px-3 border-right">
                         <h6>Email Us</h6>
-                        <p class="m-0">wearepetzone@gmail.com</p>
+                        <p class="m-0">petzone.sdp@gmail.com</p>
                     </div>
                     <div class="d-inline-flex flex-column text-center pl-3">
                         <h6>Call Us</h6>
@@ -227,7 +227,7 @@
                         <h5 class="text-primary mb-4">Get In Touch</h5>
                         <p><i class="fa fa-map-marker-alt mr-2"></i>57 Ramakrishna Rd, Colombo 00600, Sri Lanka</p>
                         <p><i class="fa fa-phone-alt mr-2"></i>+011 288 5549</p>
-                        <p><i class="fa fa-envelope mr-2"></i>wearepetzone@gmail.com</p>
+                        <p><i class="fa fa-envelope mr-2"></i>petzone.sdp@gmail.com</p>
                         <div class="d-flex justify-content-start mt-4">
                             <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 36px; height: 36px;" href="#"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 36px; height: 36px;" href="#"><i class="fab fa-facebook-f"></i></a>
